test/parser/bad/_custom/escape_eof.java
// This test sees if escape lookahead will fail if there is no next character.

public class A {
    public string m() {return "\